# apaleo-api-client-tools

./: .gitignore  .gitmessage.txt  LICENSE  README.md
codegen-apaleo-api-client/: Makefile  codegen.py  pyproject.toml
codegen-apaleo-api-client/basemodels/: core_v0_inventory.py  core_v1_booking.py  core_v1_finance.py  core_v1_inventory.py  core_v1_rateplan.py  identity_v1_identity.py
codegen-apaleo-api-client/dataclasses/: core_v0_inventory.py  core_v1_booking.py  core_v1_finance.py  core_v1_inventory.py  core_v1_rateplan.py  identity_v1_identity.py
codegen-apaleo-api-client/openapi_jsons/: Code.json  core_v0_inventory.json  core_v1_booking.json  core_v1_finance.json  core_v1_inventory.json  core_v1_rateplan.json  identity_v1_identity.json
codegen-apaleo-api-client/swagger_jsons/: Code.json  core_v0_inventory.json  core_v1_booking.json  core_v1_finance.json  core_v1_inventory.json  core_v1_rateplan.json  identity_v1_identity.json
test-apaleo-api-client/: Makefile  README.md  pyproject.toml  test.py  test_authorization_code.py  test_authorization_code_slim.py  test_client_credentials.py  test_readme_3.py
versions/0.2.0/: pyproject.toml  test_readme_1.py  test_readme_2.py  test_readme_4.py
