[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "codegen-apaleo-api-client"
version = "0.1.0"
description = ""
authors = ["Gábor Lipták <shearer83@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = ">=2.12.5,<3.0.0"
openapi-client-python = ">=1.0.0,<2.0.0"
openapi-python-generator = ">=2.1.2,<3.0.0"
datamodel-code-generator = {extras = ["ruff"], version = "^0.54.0"}
isort = "^8.0.1"
black = "^26.3.1"
