[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "test-apaleo-api-client"
version = "0.1.0"
description = ""
authors = ["Gábor Lipták <shearer83@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.136.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.2.2"
apaleo-api-client = {path = "../../apaleo-api-client", develop = true}
freezegun = ">=1.5.5,<2.0.0"
black = ">=26.3.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
